--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -26,37 +26,36 @@
 
 <body>
 
-	<div data-role="page" id="broadcaster" data-theme="a">
 
-		<DIV data-role="header" data-theme="a" data-position="fixed">
 
-			<TABLE BORDER=0 WIDTH="100%" CELLPADDING=0 CELLSPACING=0>
-				<TR>
-					<TD CLASS="title" ALIGN="left"> <A HREF="./index.html"><B>StreetEyes</B></A></TD>
-					<TD VALIGN="middle" ALIGN="right"><a href="#search"
-						data-role="button" data-mini="true" data-icon="search"
-						data-theme="e" data-inline="true" data-iconpos="notext"
-						style="vertical-align: middle;" data-mini="true" CLASS="link_search">Search</a> <a
-						href="#settings" data-role="button" data-icon="gear"
-						data-theme="e" data-inline="true" data-iconpos="notext"
-						style="vertical-align: middle;">Settings</a></TD>
-				</TR>
-			</TABLE>
 
-			<div data-role="navbar" class="ui-body-a" data-mini="true">
-				<ul>
-					<LI><A HREF="#broadcaster" class="ui-btn-active" data-theme="e">Broadcast Now!</A></LI>
-					<li><a href="#streams" ID="link_viewer" data-theme="e">View Streams</a></li>
-				</ul>
-			</div> <!-- /navbar -->
 
-		</DIV> <!-- /header -->
+<div data-role="page" id="broadcaster" data-theme="a">
+
+<DIV data-role="header" data-theme="a" data-position="fixed">
+
+<TABLE BORDER=0 WIDTH="100%" CELLPADDING=0 CELLSPACING=0><TR>
+	<TD CLASS="title" ALIGN="left"> <A HREF="./index.html"><B>StreetEyes</B></A></TD>
+	<TD VALIGN="middle" ALIGN="right"><a href="#search" data-role="button" data-mini="true" data-icon="search"
+		data-theme="e" data-inline="true" data-iconpos="notext" style="vertical-align: middle;" data-mini="true"
+		CLASS="link_search">Search</a> <a href="#settings" data-role="button" data-icon="gear" data-theme="e"
+		data-inline="true" data-iconpos="notext" style="vertical-align: middle;">Settings</a></TD>
+</TR></TABLE>
+
+<div data-role="navbar" class="ui-body-a" data-mini="true">
+<ul>
+<LI><A HREF="#broadcaster" class="ui-btn-active" data-theme="e">Broadcast Now!</A></LI>
+<li><a href="#streams" ID="link_viewer" data-theme="e">View Streams</a></li>
+</ul>
+</div> <!-- /navbar -->
+
+</DIV> <!-- /header -->
 
 		<div data-role="content" data-theme="a">
 			<!--  insert external div -->
 			<div id="lastUpdate"></div><BR />
 
-			<p id="geolocation" STYLE="text-align: center; margin: auto; display: inline;">Finding geolocation...</p>
+			<center><div id="geolocation" STYLE="text-align: center; margin: auto; display: inline;">Finding geolocation...</div></center>
 			
 			<FORM NAME="updateForm" ID="updateForm" data-ajax="false" enctype="multipart/form-data" METHOD="post" ACTION="http://benturner.com/streeteyes/statusupdate.php">
 			<input type="hidden" name="updatePhoto" id="updatePhoto" VALUE="" />
@@ -145,10 +144,6 @@
 	<div id="active" style="display: block;">
 		<BR />
 		
-		
-<div id="streamContainer"></div>
-
-<BR /><BR />
 <FORM NAME="chatForm" ID="chatForm" METHOD="post" data-ajax="false" ACTION="">
 <INPUT TYPE="hidden" ID="chatID" NAME="chatID" VALUE=1 />
 <INPUT TYPE="hidden" ID="chatBroadcast" NAME="chatBroadcast" VALUE="true" />
@@ -161,9 +156,12 @@ Your nick/handle/name:<BR />
 </TD></TR></TABLE>
 <INPUT TYPE="submit" ID="chatSubmit" NAME="chatSubmit" VALUE="send message" data-mini="true" />
 </FORM>
+<BR />
+		
+<div id="streamContainer"></div>
 
-	</div>	
-		</DIV> <!-- end content-page -->
+	</div> <!-- /active -->
+		</DIV> <!-- /content -->
 		
 		<DIV data-role="footer" data-theme="a" data-position="fixed">
 		
@@ -217,6 +215,7 @@ Your nick/handle/name:<BR />
 
 		<div data-role="content">
 
+<FORM METHOD="get" ACTION="" NAME="formProfile" ID="formProfile">
 			<BR /><H3>YOUR PROFILE</H3>
 			<BR />
 			<label class="labelInput">
@@ -249,6 +248,7 @@ Your nick/handle/name:<BR />
 					data-transition="fade" CLASS="updateButton" data-inline="true"
 					data-theme="b">update settings</a>
 			</CENTER>
+			</FORM>
 
 		</DIV>
 		<!-- end content-page -->
@@ -326,29 +326,25 @@ Your nick/handle/name:<BR />
 				<CENTER>
 					<INPUT type="submit" id="newViewRequest" data-role="button"
 						data-transition="fade" CLASS="updateButton" data-inline="true"
-						data-theme="b" VALUE="send request">
+						data-theme="b" VALUE="send request" />
+						<DIV ID="sentRequest"></DIV>
 				</CENTER>
 				
 				</div>
 
 			</FORM>
 
-			<H3>Search Events</H3>
-			<BR />
+<H3>Search Events</H3>
+<BR />
 
-			<div data-role="fieldcontain">
-			<input type="search" name="password" id="search" value="" /><BR />
-				<CENTER>
-					<input type="submit" value="search" data-theme="b"
-						data-inline="true" />
-				</CENTER>
-			</div>
+<div data-role="fieldcontain">
+<input type="search" name="password" id="search" value="" /><BR />			
+<CENTER><input type="submit" value="search" data-theme="b" data-inline="true" /></CENTER>
+</div> <!-- /fieldcontain -->
 
-		</DIV>
-		<!-- end content-page -->
+</DIV> <!-- end content-page -->
 
-	</div>
-	<!-- /page -->
+</div> <!-- /page -->
 
 
 <script type="text/javascript">
@@ -373,9 +369,23 @@ $(function() {
 		$("#active").css('display', 'none');
 		$("#public").css('display', 'block');
 	});
+	$("#newViewRequest").click(function() {
+		console.log("click fired");
+		var dataString = 'viewLocation=' + $("input#viewLocation").val() + '&viewUser=' + $("input#viewUser").val()
+		+ '&viewWhat=' + $("input#viewWhat").val() + '&viewMedia=' + $("input#viewMedia").val() +
+		'&updateGeoLon=' + $("input#updateGeoLon") + '&updateBroadcast=' + $("#updateBroadcast").val();
+		$.mobile.loadPage("http://benturner.com/streeteyes/newviewrequest_mobile.php?" + dataString, {
+	        reloadPage : true
+	    }); 
+			$("#sentRequest").html("<CENTER>Request sent.</CENTER>");
+		
+		return false;
+	});
 	$("#statusUpdate").click(function() {
 		console.log("click fired");
-		var dataString = 'updateStatus=' + $("input#updateStatus").val() + '&updateUstream=' + $("input#updateUstream").val() + '&updatePhoto=' + $("input#updatePhoto").val() + '&updateGeoLat=' + $("input#updateGeoLat").val() + '&updateGeoLon=' + $("input#updateGeoLon") + '&updateBroadcast=' + $("#updateBroadcast").val();
+		var dataString = 'updateStatus=' + $("input#updateStatus").val() + '&updateUstream=' + $("input#updateUstream").val()
+		+ '&updatePhoto=' + $("input#updatePhoto").val() + '&updateGeoLat=' + $("input#updateGeoLat").val() +
+		'&updateGeoLon=' + $("input#updateGeoLon") + '&updateBroadcast=' + $("#updateBroadcast").val();
 		$.mobile.loadPage("http://benturner.com/streeteyes/statusupdate.php?" + dataString, {
 	        reloadPage : true
 	    }); 
@@ -394,11 +404,13 @@ $(function() {
 	});
 	$("#chatSubmit").click(function() {
 		console.log("click fired");
-		var dataString = 'streamID=' + $("input#chatID").val() + '&chatNick=' + $("input#chatNick").val() + '&chatMsg=' + $("input#chatMsg").val() + '&updateBroadcast=false';
+		var dataString = 'streamID=' + $("input#chatID").val() + '&chatNick=' + $("input#chatNick").val() + '&chatMsg='
+		+ $("input#chatMsg").val() + '&updateBroadcast=false';
 		$.mobile.loadPage("http://benturner.com/streeteyes/sendchat.php?" + dataString, {
         	reloadPage : true
         }); 
-		$("#streamList").load("http://benturner.com/streeteyes/streams_mobile.php");
+		//$("#streamList").load("http://benturner.com/streeteyes/streams_mobile.php");
+		$("#streamContainer").load("http://benturner.com/streeteyes/stream.php");
 		/* $.ajax({  
   			type: "POST", 
   			cache: false,
@@ -407,7 +419,7 @@ $(function() {
   			success: function() {   
   				$("#streamList").load("http://benturner.com/streeteyes/streams_mobile.php");
   			} */ 
-		return false; //
+		return false;
 	});
 });
 
